[tool.poetry]
name = "pyrb"
version = "0.4.0"
description = "Python Rebalancer"
authors = ["Minki Kim <mingi3314@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pyrb = "pyrb.controller:app"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"
pydantic = "^2.1.1"
requests = "^2.31.0"
pydantic-settings = "^2.0.3"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
ruff = "0.0.282"
black = "23.7.0"
mypy = "1.4.1"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.black]
line-length = 100
preview=true

[tool.mypy]
python_version = "3.11" 
ignore_missing_imports = true 
disallow_any_generics = true 
disallow_untyped_calls= true 
disallow_untyped_defs= true 
disallow_incomplete_defs = true 
disallow_untyped_decorators = true 
check_untyped_defs = true 
strict_optional = false 
warn_redundant_casts = true 
warn_unused_ignores = true 
allow_redefinition = true 
show_column_numbers = true 
no_implicit_reexport = true 
pretty = true

plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true