[project]
name = "pyrb"
version = "0.10.10"
description = "Python Rebalancer"
authors = [{ name = "Minki Kim", email = "mingi3314@gmail.com" }]
requires-python = ">=3.8, <3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.6,<9",
    "pydantic>=2.1.1,<3",
    "requests>=2.31.0,<3",
    "pydantic-settings>=2.0.3,<3",
    "typer[all]>=0.9.0,<0.10",
    "toml>=0.10.2,<0.11",
    "pyyaml>=6.0.1,<7",
    "fastapi>=0.109.2,<0.110",
    "uvicorn[standard]>=0.27.1,<0.28",
]

[project.scripts]
pyrb = "pyrb.controllers.cli.main:app"

[dependency-groups]
dev = [
    "ruff==0.15.0",
    "pytest>=7.4.0,<8",
    "pytest-mock>=3.11.1,<4",
    "types-requests>=2.31.0.2,<3",
    "types-pyyaml>=6.0.12.12,<7",
    "types-toml>=0.10.8.7,<0.11",
    "httpx>=0.27.0,<0.28",
    "pyinstaller>=6.4.0,<7",
    "freezegun>=1.4.0,<2",
    "preq>=0.1.0",
    "mypy==1.14.1",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
fix = true
exclude = [
    '*.pyi',
    "site-packages",
    "node_modules",
    ".mypy_cache",
    ".ruff_cache",
]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
unfixable = ["B"] # Avoid trying to fix flake8-bugbear (`B`) violations.
preview = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"constants.py" = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Depends",
    "fastapi.Path",
    "fastapi.Query",
    "fastapi.security.http.HTTPBearer",
]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.12"
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_redefinition = true
show_column_numbers = true
no_implicit_reexport = true
pretty = true

plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
